Updated by mdAutofix.py

--- a/c-legacy-releases/2025/10142025.md
+++ b/c-legacy-releases/2025/10142025.md
@@ -42,7 +42,7 @@ ht-degree: 47%
 +++檢視區段連結
 
 * [活動排程](#events)
-* [ [!DNL Experience Cloud]中的AI功能](#ai)
+* [&#x200B; [!DNL Experience Cloud]中的AI功能](#ai)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Adobe Experience Cloud] - 統一介面與管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -323,15 +323,15 @@ New articles and updates to existing articles for [!DNL Customer Journey Analyti
 | 2025 年 11 月 | [在AEM as a Cloud Service中疑難排解前端管道失敗](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-28088) | 新文章 | 瞭解在AEM as a Cloud Service中將完整棧疊管道轉換為僅前端(FE)管道時，由於平台特定的相依性和嚴格的篩選要求會發生建置失敗的問題。 |
 | 2025 年 11 月 | [[!DNL Tika] 設定在AEMaaCS-Assets中無法運作](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27615) | 新文章 | 瞭解當雲端環境中忽略自訂[!DNL Tika]設定（例如排除PDF），預設為立即可用(OOTB)設定時，AEMaaCS-Assets中問題的解決方案。 |
 | 2025 年 11 月 | 在AEMaaCS中切換至私人GitHub存放庫後[遺失發行分支](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27923) | 新文章 | 瞭解AEMaaCS中問題的解決方案，在使用私人GitHub存放庫設定部署管道時，分支選擇下拉式清單未顯示所有發行分支。 |
-| 2025 年 11 月 | [**[!UICONTROL 通用編輯器&#x200B;]**在AEMaaCS](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27935)中載入不正確的AEM作者執行個體 | 新文章 | 瞭解在作者執行個體上存取&#x200B;**[!UICONTROL 通用編輯器]**&#x200B;中的Edge Delivery Services (EDS)索引頁面從其他作者環境載入內容時，AEMaaCS中問題的解決方案。 |
+| 2025 年 11 月 | [**[!UICONTROL 通用編輯器&#x200B;]**&#x200B;在AEMaaCS](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27935)中載入不正確的AEM作者執行個體 | 新文章 | 瞭解在作者執行個體上存取&#x200B;**[!UICONTROL 通用編輯器]**&#x200B;中的Edge Delivery Services (EDS)索引頁面從其他作者環境載入內容時，AEMaaCS中問題的解決方案。 |
 | 2025 年 11 月 | [管道建置失敗，因為AEMaaCS`frontend-maven-plugin`中的快取已過時且過時的](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27902)版本 | 新文章 | 瞭解當管道建置在`UI.frontend`模組執行期間失敗時，AEMaaCS中問題的解決方案。 |
 | 2025 年 11 月 | 在AEMaaCS[中使用&#x200B;**[!UICONTROL 內容複製工具]**&#x200B;時，](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27936)複製大型DAM資料夾失敗 | 新文章 | 瞭解當使用&#x200B;**[!UICONTROL 內容複製工具]**&#x200B;在作者環境之間複製大型資料夾失敗時，AEMaaCS中問題的解決方案。 |
 | 2025 年 11 月 | 在AEMaaCS中推出AEM後[記錄轉送端點還原](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27945) | 新文章 | 瞭解當轉出後記錄轉送設定恢復為上一個端點時，AEMaaCS中問題的解決方案。 |
 | 2025 年 11 月 | [在AEM as a Cloud Service管道組建中解析`StackOverflowError`](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27979) | 新文章 | 瞭解在管道建置期間發生週期性`StackOverflowError`時問題的解決方案。 |
-| 2025 年 11 月 | 移轉至[ [!DNL CoralUI3]後](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27985)修正RTF編輯器按鈕問題 | 新文章 | 瞭解AEMaaCS中問題的解決方案，當自訂對話方塊和使用者端資料庫從[!DNL CoralUI2]移轉到[!DNL CoralUI3]會導致字型、大小和顏色的RTF編輯器按鈕停止運作。 |
+| 2025 年 11 月 | 移轉至[&#x200B; [!DNL CoralUI3]後](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27985)修正RTF編輯器按鈕問題 | 新文章 | 瞭解AEMaaCS中問題的解決方案，當自訂對話方塊和使用者端資料庫從[!DNL CoralUI2]移轉到[!DNL CoralUI3]會導致字型、大小和顏色的RTF編輯器按鈕停止運作。 |
 | 2025 年 11 月 | 在Cloud Manager管道中[認可雜湊可見性延遲](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-28031) | 新文章 | 瞭解在Cloud Manager中使用私人GitHub存放庫觸發管道時，認可雜湊只會在建置或程式碼品質步驟完成後出現，此問題的解決方案。 |
 | 2025 年 11 月 | 在AEMaaCS中建立專用輸出IP時，[網路基礎結構發生例外狀況](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27884) | 新文章 | 瞭解在由於缺少主要區域引數而建立專用輸出IP時，AEMaaCS - Sites中問題的解決方案。 |
-| 2025 年 11 月 | AEMaaCS[**[!UICONTROL 中缺少&#x200B;]**產生變數](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27894)按鈕 | 新文章 | 瞭解&#x200B;**[!UICONTROL 內容片段編輯器]**&#x200B;中缺少[!UICONTROL 產生變數]按鈕時，AEMaaCS - Sites中問題的解決方案。 |
+| 2025 年 11 月 | AEMaaCS[**[!UICONTROL 中缺少&#x200B;]**&#x200B;產生變數](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27894)按鈕 | 新文章 | 瞭解&#x200B;**[!UICONTROL 內容片段編輯器]**&#x200B;中缺少[!UICONTROL 產生變數]按鈕時，AEMaaCS - Sites中問題的解決方案。 |
 | 2025 年 11 月 | [在AEMaaCS錯誤回應(404/500)中保留`X-Correlation-Id`](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27918) | 新文章 | 瞭解當`X-Correlation-Id`404 Not Found *或* 500 Internal Server Error *錯誤回應中缺少*&#x200B;標頭時(即使AEM記錄檔確認已設定)，AEMaaCS中問題的解決方案。 |
 | 2025 年 11 月 | [AEM部署管道失敗，因為OSGi設定屬性無效](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27930) | 新文章 | 瞭解當中繼和生產環境中的部署管道在執行數小時的&#x200B;**[!UICONTROL 更新服務]**&#x200B;子步驟期間失敗時，AEMaaCS中問題的解決方案。 |
 | 2025 年 11 月 | 由於遺失OSGi組合，[AEM部署後RDE服務中斷](https://experienceleague.adobe.com/en/docs/experience-cloud-kcs/kbarticles/ka-27376) | 新文章 | 瞭解將程式碼部署到AEMaaCS RDE （快速開發環境）環境時，當第三方OSGi套件組合（如`io.jsonwebtoken`）因更嚴格的API區域限制而無法解決時導致服務中斷問題的解決方案。 |
@@ -360,7 +360,7 @@ New articles and updates to existing articles for [!DNL Customer Journey Analyti
 
 +++發行說明、新的教學課程，以及支援文章
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -462,7 +462,7 @@ New or updated videos tutorials published for Adobe Campaign.
 
 如需詳細資訊，請參閱 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes)。
 
-**注意：**[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
+**注意：**&#x200B;[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
 
 ### [!DNL Journey Optimizer] 最新教學課程 {#tutorials-ajo}
 
@@ -529,7 +529,7 @@ New or updated videos tutorials published for Adobe Campaign.
 發行版本： **2025年10月**
 
 * [最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/current)
-* [!DNL Marketo Engage] [ 發行排程](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/release-schedule)
+* [!DNL Marketo Engage] [&#x200B; 發行排程](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/release-schedule)
 * Dynamic Chat [發行說明](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/dynamic-chat) (2025 年 6 月 30 日)
 
 <!-- ### New Marketo tutorials {#tutorials-marketo}
@@ -645,13 +645,13 @@ GenStudio for Performance Marketing 的教學影片。
 
 2025年10月29日
 
-查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
 2025年10月15日
 
-查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
