--- a/c-legacy-releases/2022/07202022.md
+++ b/c-legacy-releases/2022/07202022.md
@@ -15,7 +15,7 @@ ht-degree: 97%
 
 # Adobe Experience Cloud 版本注意事項 - 2022 年 7 月
 
-身為 Experience Maker，您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。尋找廣大的操作說明文件庫、自我引導式教學課程、操作說明影片、所有等級和角色適用的課程、線上同業社群，以及需要時的專家支援。
+身為 Experience Maker，您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/#home)。尋找廣大的操作說明文件庫、自我引導式教學課程、操作說明影片、所有等級和角色適用的課程、線上同業社群，以及需要時的專家支援。
 
 上次更新日期：**2022 年 8 月 11 日**
 
@@ -40,7 +40,7 @@ ht-degree: 97%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [&#x200B; Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群見解，以及由講師授課的訓練課程。
 
 ## [!DNL Adobe System Status] {#status}
 
@@ -475,8 +475,8 @@ Experience League 最新的 Workfront 課程與教學課程。
 [!DNL Adobe Advertising Cloud] 發行說明。
 
 <!-- * [New features across [!DNL Advertising Cloud]](#adcloud-all) -->
-* [ [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
-* [ [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
+* [&#x200B; [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
+* [&#x200B; [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
 <!-- * [New [!DNL Advertising Cloud] tutorials](#tutorials-ad-cloud) -->
 
 <!--
