Updated by AutoLocalizeURLs.py

--- a/c-legacy-releases/2021/01142021.md
+++ b/c-legacy-releases/2021/01142021.md
@@ -296,7 +296,7 @@ Experience Manager 6.4 Service Pack 8 Cumulative Fix Pack 3 （6.4.8.3，已於2
 
 ### 社群
 
-**2021 年 1 月 Experience League 的最新 Adobe Experience Manager 內容** - 請前往[這裡](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/list-of-latest-adobe-experience-manager-content-on-experience/td-p/392549)參閱精選影片、文章、教學課程和其他課程的完整清單。
+**2021 年 1 月 Experience League 的最新 Adobe Experience Manager 內容** - 請前往[這裡](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/list-of-latest-adobe-experience-manager-content-on-experience/td-p/392549?profile.language=zh-Hant)參閱精選影片、文章、教學課程和其他課程的完整清單。
 
 ### 最新 Experience Manager 課程與教學課程
 
