--- a/c-legacy-releases/2021/03252021.md
+++ b/c-legacy-releases/2021/03252021.md
@@ -297,11 +297,11 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 4 （6.4.8.4，已於2021年2月25日
 
 * **Adobe Developers Live 2021 | 完整諮詢清單**
 
-  [這裡](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-developers-live-2021-complete-session-list/m-p/394595#M27875)提供在 **Adobe 開發人員直播** 中進行的所有 Experience Manager 場次的彙總清單。
+  [這裡](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-developers-live-2021-complete-session-list/m-p/394595?profile.language=zh-Hant#M27875)提供在 **Adobe 開發人員直播** 中進行的所有 Experience Manager 場次的彙總清單。
 
 * **Adobe Summit 2021 | 完整 Experience Manager 場次清單**
 
-  [這裡](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-summit-2021-complete-aem-session-list/td-p/398344)提供在 **Adobe Summit 2021** 中進行的所有 Experience Manager 場次的彙總清單。
+  [這裡](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-summit-2021-complete-aem-session-list/td-p/398344?profile.language=zh-Hant)提供在 **Adobe Summit 2021** 中進行的所有 Experience Manager 場次的彙總清單。
 
 ### Experience Manager 發行資訊
 
