--- a/c-legacy-releases/2021/06172021.md
+++ b/c-legacy-releases/2021/06172021.md
@@ -246,11 +246,11 @@ Audience Manager 中的修正與改良。
 
 ### **Experience Manager 社群**:
 
-* [針對所有 Experience Manager 部落格的全方位服務](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/bd-p/adobe-experience-manager-discussions)
+* [針對所有 Experience Manager 部落格的全方位服務](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/bd-p/adobe-experience-manager-discussions?profile.language=zh-Hant)
 
-* [提交新 Experience Manager 構想的准則](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/guidelines-for-submitting-a-new-experience-manager-aem-idea/td-p/382376)
+* [提交新 Experience Manager 構想的准則](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/guidelines-for-submitting-a-new-experience-manager-aem-idea/td-p/382376?profile.language=zh-Hant)
 
-* [與 Dan Levy 一起參加 Adobe Summit 2021 Sneaks](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-summit-2021-sneaks-with-dan-levy/td-p/405865)：在每年一次的大會中，每位 Adobe 員工 (從工程師和資料科學家到 UX 設計師和產品經理) 都有機會分享創新的構想，以改進品牌與客戶互動的方式。 參加我們的 Adobe Sneaks，我們在大會中分享七大專案，每個專案都會利用 AI 和低程式碼應用程式等領域的最新技術。
+* [與 Dan Levy 一起參加 Adobe Summit 2021 Sneaks](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-summit-2021-sneaks-with-dan-levy/td-p/405865?profile.language=zh-Hant)：在每年一次的大會中，每位 Adobe 員工 (從工程師和資料科學家到 UX 設計師和產品經理) 都有機會分享創新的構想，以改進品牌與客戶互動的方式。 參加我們的 Adobe Sneaks，我們在大會中分享七大專案，每個專案都會利用 AI 和低程式碼應用程式等領域的最新技術。
 
 ### Experience Manager 發行資訊
 
