--- a/c-legacy-releases/2021/09152021.md
+++ b/c-legacy-releases/2021/09152021.md
@@ -324,13 +324,13 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
 ### 社群
 
-* [Experience League 上最新 Adobe Experience Manager 內容的清單 | 2021 年 9 月](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/list-of-latest-adobe-experience-manager-content-on-experience/m-p/421751#M29908)
+* [Experience League 上最新 Adobe Experience Manager 內容的清單 | 2021 年 9 月](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/list-of-latest-adobe-experience-manager-content-on-experience/m-p/421751?profile.language=zh-Hant#M29908)
 
-  最新文章的完整清單位於[此處](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/list-of-latest-adobe-experience-manager-content-on-experience/m-p/421751#M29908)。
+  最新文章的完整清單位於[此處](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/list-of-latest-adobe-experience-manager-content-on-experience/m-p/421751?profile.language=zh-Hant#M29908)。
 
-* [如何提交對於 Experience Manager 的新功能請求/建議？](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/announcing-the-new-process-to-submit-experience-manager-feature/td-p/380425)
+* [如何提交對於 Experience Manager 的新功能請求/建議？](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/announcing-the-new-process-to-submit-experience-manager-feature/td-p/380425?profile.language=zh-Hant)
 
-  提交 Experience Manager 功能請求的新程序是 Live Now。請參閱[建立新構想](https://experienceleaguecommunities.adobe.com/t5/forums/postpage/board-id/adobe-experience-manager-ideas) | 更多[詳細資訊列於此處](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/announcing-the-new-process-to-submit-experience-manager-feature/td-p/380425) | [提交指南](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/guidelines-for-submitting-a-new-experience-manager-aem-idea/m-p/382376#M27427)
+  提交 Experience Manager 功能請求的新程序是 Live Now。請參閱[建立新構想](https://experienceleaguecommunities.adobe.com/t5/forums/postpage/board-id/adobe-experience-manager-ideas?profile.language=zh-Hant) | 更多[詳細資訊列於此處](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/announcing-the-new-process-to-submit-experience-manager-feature/td-p/380425?profile.language=zh-Hant) | [提交指南](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/guidelines-for-submitting-a-new-experience-manager-aem-idea/m-p/382376?profile.language=zh-Hant#M27427)
 
 ### 最新 Experience Manager 課程與教學課程 {#tutorials-aem}
 
