--- a/c-legacy-releases/2021/10072021.md
+++ b/c-legacy-releases/2021/10072021.md
@@ -245,9 +245,9 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
   Adobe 已規劃 20 場 Experience Manager 研討會。宣傳訊息！
 
-   * [完整的研討會清單](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-developers-live-october-2021-complete-session-list/m-p/423041#M120517)
+   * [完整的研討會清單](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-developers-live-october-2021-complete-session-list/m-p/423041?profile.language=zh-Hant#M120517)
    * [免費註冊 – 登入 RSVP](https://developerevents.adobe.com/events/details/adobe-developer-events-developer-experience-presents-adobe-developers-live/?cid=Kautuk)
-   * [Adobe Developers Live Community](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/registration-for-adobe-developers-live-is-now-open-october-4-5/td-p/422127)
+   * [Adobe Developers Live Community](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/registration-for-adobe-developers-live-is-now-open-october-4-5/td-p/422127?profile.language=zh-Hant)
 
 ### 最新 Experience Manager 課程與教學課程 {#tutorials-aem}
 
