--- a/c-legacy-releases/2021/10282021.md
+++ b/c-legacy-releases/2021/10282021.md
@@ -72,7 +72,7 @@ ht-degree: 96%
 
 | 活動名稱 | 日期與時間 | 應用程式 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |---------- |
-| Adobe Target - 設定和管理 UI、A4T 整合、AEM 整合、通用 UI | 太平洋時間 12 月 8 日星期三上午 8 點 | Adobe Target | 論壇問答 | Adobe Target 資深產品經理 Robert Calangiu (也就是 @Robert_Calangiu) 將與我們一起進入 Adobe Target 社群，直接和您討論有關他專業領域的 Adobe Target 問題。<br>[詳細資訊](https://experienceleaguecommunities.adobe.com/t5/adobe-target-discussions/at-community-q-amp-a-coffee-break-12-8-21-8am-pt-robert-calangiu/td-p/426697) |
+| Adobe Target - 設定和管理 UI、A4T 整合、AEM 整合、通用 UI | 太平洋時間 12 月 8 日星期三上午 8 點 | Adobe Target | 論壇問答 | Adobe Target 資深產品經理 Robert Calangiu (也就是 @Robert_Calangiu) 將與我們一起進入 Adobe Target 社群，直接和您討論有關他專業領域的 Adobe Target 問題。<br>[詳細資訊](https://experienceleaguecommunities.adobe.com/t5/adobe-target-discussions/at-community-q-amp-a-coffee-break-12-8-21-8am-pt-robert-calangiu/td-p/426697?profile.language=zh-Hant) |
 | Adobe Campaign - 透過其他應用程式匯入資料 | 太平洋時間 2021 年 12 月 2 日星期四上午 8 點 | Adobe Campaign | 論壇問答 | 透過其他應用程式匯入資料 - 資深技術顧問 Zariely Garcia 將說明使用技術工作流程，透過 SFTP/API 匯入資料的最佳做法。<br>[詳細資訊](https://forms.office.com/Pages/ResponsePage.aspx?id=Wht7-jR7h0OUrtLBeN7O4UuYOxSr9BdGsLPtk3ITDIdUMFYwT0REQTk5RDZPTjlEWFlSUk1XWTBHVy4u&wdLOR=cEEEC3C73-227C-457C-AA83-44CC08D697B9)。 |
 
 {style="table-layout:auto"}
@@ -248,7 +248,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
   Adobe 已規劃 20 場 Experience Manager 研討會。宣傳訊息！
 
-   * [完整的研討會清單](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-developers-live-october-2021-complete-session-list/m-p/423041#M120517)
+   * [完整的研討會清單](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-developers-live-october-2021-complete-session-list/m-p/423041?profile.language=zh-Hant#M120517)
    * [免費註冊 – 登入 RSVP](https://developerevents.adobe.com/events/details/adobe-developer-events-developer-experience-presents-adobe-developers-live/?cid=Kautuk)
    * [Adobe Developers Live Community](https://experienceleaguecommunities.adobe.com:443/t5/adobe-experience-manager/registration-for-adobe-developers-live-is-now-open-4th-amp-5th/td-p/422127)
 
