--- a/c-legacy-releases/2022/01192022.md
+++ b/c-legacy-releases/2022/01192022.md
@@ -290,13 +290,13 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
    * [按一下這裡報名](https://adobe.ly/3tAh3OC)
    * [提出問題](https://adobe.ly/3zJrS0f)
 
-* [宣佈 2021 年社群成員](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/announcing-community-members-of-the-year-2021/td-p/436782)
+* [宣佈 2021 年社群成員](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/announcing-community-members-of-the-year-2021/td-p/436782?profile.language=zh-Hant)
 
-  我們衷心感謝所有參與 [2021 年 Experience Manager 社群](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/ct-p/adobe-experience-manager-community)的人，感謝他們幫助其他人解決問題。
+  我們衷心感謝所有參與 [2021 年 Experience Manager 社群](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/ct-p/adobe-experience-manager-community?profile.language=zh-Hant)的人，感謝他們幫助其他人解決問題。
 
-  每年，Experience Cloud 社群都向在服務和支援方面表現出色的會員頒發年度社群成員獎 (Community Member of the Year award)。 我們要公開表揚一些人的努力，特此宣佈 [@Asutosh_Jena_](https://experienceleaguecommunities.adobe.com/t5/user/viewprofilepage/user-id/7532759) 和 [@Vijayalakshmi_S](https://experienceleaguecommunities.adobe.com/t5/user/viewprofilepage/user-id/11077056) 獲得 2021 年年度社群成員獎。
+  每年，Experience Cloud 社群都向在服務和支援方面表現出色的會員頒發年度社群成員獎 (Community Member of the Year award)。 我們要公開表揚一些人的努力，特此宣佈 [@Asutosh_Jena_](https://experienceleaguecommunities.adobe.com/t5/user/viewprofilepage/user-id/7532759?profile.language=zh-Hant) 和 [@Vijayalakshmi_S](https://experienceleaguecommunities.adobe.com/t5/user/viewprofilepage/user-id/11077056?profile.language=zh-Hant) 獲得 2021 年年度社群成員獎。
 
-* [2022 年 1 月 Experience League 內容](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/experience-league-content-for-month-of-january-2022/td-p/437137)
+* [2022 年 1 月 Experience League 內容](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/experience-league-content-for-month-of-january-2022/td-p/437137?profile.language=zh-Hant)
 
   [列出在 Experience League 內發佈佈的 Experience Manager 內容月](https://adobe.ly/3tuGuRH)
 
