--- a/c-legacy-releases/2022/03232022.md
+++ b/c-legacy-releases/2022/03232022.md
@@ -219,7 +219,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
 * **Experience Manager GEM 網路研討會：_使用 Experience Manager Headless 和 App Builder 更快建立網站_**
 
-   * 您錯過 Adobe Summit 2022 開場專題演講嗎？觀看「[打造個人數位經濟](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-summit-2022-opening-keynote-make-the-digital-economy/td-p/444612)」。
+   * 您錯過 Adobe Summit 2022 開場專題演講嗎？觀看「[打造個人數位經濟](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-summit-2022-opening-keynote-make-the-digital-economy/td-p/444612?profile.language=zh-Hant)」。
    * Adobe Summit 2022 | [完整 Experience Manager 場次清單](https://adobe.ly/3rti6gF).
    * Experience Manager GEMs | 網路研討會 | 2022 年 3 月 23 日星期三
       * 主題：*使用 Experience Manager Headless 和 App Builder 更快建立網站*
