--- a/c-legacy-releases/2022/08172022.md
+++ b/c-legacy-releases/2022/08172022.md
@@ -203,9 +203,9 @@ _新功能_
 
 ### 社群
 
-* Experience Manager as a Cloud Service [2022.7.0 版本更新](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/aem-as-a-cloud-service-2022-7-0-release-update/ba-p/540062#M546)。
-* 最後！所有您需要的全部 Experience Manager 內容都在 [Experience Manager 社群](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/finally-all-the-aem-content-you-need-all-in-one-place-on-aem/ba-p/460583)上的同一處。
-* Adobe Experience Manager [Community Lens 第 1 版](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/adobe-experience-manager-community-lens-1st-edition-august-2022/ba-p/538960)，2022 年 8 月。
+* Experience Manager as a Cloud Service [2022.7.0 版本更新](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/aem-as-a-cloud-service-2022-7-0-release-update/ba-p/540062?profile.language=zh-Hant#M546)。
+* 最後！所有您需要的全部 Experience Manager 內容都在 [Experience Manager 社群](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/finally-all-the-aem-content-you-need-all-in-one-place-on-aem/ba-p/460583?profile.language=zh-Hant)上的同一處。
+* Adobe Experience Manager [Community Lens 第 1 版](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/adobe-experience-manager-community-lens-1st-edition-august-2022/ba-p/538960?profile.language=zh-Hant)，2022 年 8 月。
 
 ### 最新 Experience Manager 課程與教學課程 {#tutorials-aem}
 
