--- a/c-legacy-releases/2022/09072022.md
+++ b/c-legacy-releases/2022/09072022.md
@@ -217,7 +217,7 @@ _新功能_
 ### 社群
 
 * AEM as a Cloud Service 2022.7.0 - [版本更新](https://adobe.ly/3paYDAo)。
-* **Experience League 展示** - 向我們和全世界展示您可以使用多個 Adobe Experience Cloud 產品做什麼。[立即提交您的故事！](https://experienceleaguecommunities.adobe.com/t5/experience-league-showcase-2022/con-p/exl-showcase-2022?sdid=3NQZB6J7&mv=email)
+* **Experience League 展示** - 向我們和全世界展示您可以使用多個 Adobe Experience Cloud 產品做什麼。[立即提交您的故事！](https://experienceleaguecommunities.adobe.com/t5/experience-league-showcase-2022/con-p/exl-showcase-2022?profile.language=zh-Hant&sdid=3NQZB6J7&mv=email)
 
 ### 最新 Experience Manager 課程與教學課程 {#tutorials-aem}
 
