--- a/c-legacy-releases/2023/03082023.md
+++ b/c-legacy-releases/2023/03082023.md
@@ -23,7 +23,7 @@ ht-degree: 98%
 
 **需要協助嗎?**
 
-您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/zh-hant#home)。 瀏覽我們龐大的自助[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。 尋找各種等級和角色的[課程](https://experienceleague.adobe.com/zh-hant#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)。
+您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/zh-hant#home)。 瀏覽我們龐大的自助[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。 尋找各種等級和角色的[課程](https://experienceleague.adobe.com/zh-hant#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=zh-Hant)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
