--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -23,7 +23,7 @@ ht-degree: 98%
 
 **需要協助嗎?**
 
-您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/zh-hant#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/zh-hant#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)。
+您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/zh-hant#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/zh-hant#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=zh-Hant)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -323,8 +323,8 @@ _已知問題_
 
 * [Adobe Experience Manager as a Cloud Service 2023.2.0 版本更新](https://adobe.ly/3KCfab0)
 * [Adobe Developers Live：可撰寫的體驗](https://adobe.ly/3GWSdOL) | 2023年5月23日星期二晚上7:30 (GMT+5:30)
-* Adobe Developers Live：可組合的體驗，2023 年 5 月 | [完整的研討會清單](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-developers-live-composable-experiences-may-2023-complete/td-p/591146)
-* [Adobe Experience Manager Community Lens 第 5 版](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/adobe-experience-manager-community-lens-5th-edition-april-2023/ba-p/587822)，2023 年 4 月
+* Adobe Developers Live：可組合的體驗，2023 年 5 月 | [完整的研討會清單](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager/adobe-developers-live-composable-experiences-may-2023-complete/td-p/591146?profile.language=zh-Hant)
+* [Adobe Experience Manager Community Lens 第 5 版](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-manager-blogs/adobe-experience-manager-community-lens-5th-edition-april-2023/ba-p/587822?profile.language=zh-Hant)，2023 年 4 月
 
 ### Experience Manager 發行資訊
 
