--- a/c-legacy-releases/2023/10252023.md
+++ b/c-legacy-releases/2023/10252023.md
@@ -19,7 +19,7 @@ ht-degree: 99%
 
 <!-- ![Banner](assets/release-notes-header.png) -->
 
-此頁面可協助您尋找 Experience Cloud 和 Adobe 企業應用程式的發行說明。為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home) 並在 Adobe 免費的[文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)庫、[課程](https://experienceleague.adobe.com/zh-hant#courses)、[活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)中自訂您的搜尋體驗。
+此頁面可協助您尋找 Experience Cloud 和 Adobe 企業應用程式的發行說明。為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home) 並在 Adobe 免費的[文件](https://experienceleague.adobe.com/docs/?lang=zh-Hant)庫、[課程](https://experienceleague.adobe.com/zh-hant#courses)、[活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=zh-Hant)和[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)中自訂您的搜尋體驗。
 
 ## 2023 年 11 月/12 月
 
