--- a/c-legacy-releases/2024/01112024.md
+++ b/c-legacy-releases/2024/01112024.md
@@ -26,7 +26,7 @@ ht-degree: 99%
 * 即將推出的 Experience League 活動
 * 最新影片教學課程
 
-為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/zh-hant?lang=zh-hant#courses)、[活動](https://experienceleague.adobe.com/zh-hant/events)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)和[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
+為了獲得最佳的自助體驗，請登入 [Experience League](https://experienceleague.adobe.com/zh-hant#home)，並在 Adobe 免費的[文件](https://experienceleague.adobe.com/zh-hant/docs)、[課程](https://experienceleague.adobe.com/zh-hant?lang=zh-hant#courses)、[活動](https://experienceleague.adobe.com/zh-hant/events)、[社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=zh-Hant)和[支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)等資源庫中自訂您的搜尋體驗。
 
 ## 2024 年 1 月
 
