--- a/c-legacy-releases/2025/01222025.md
+++ b/c-legacy-releases/2025/01222025.md
@@ -24,7 +24,7 @@ ht-degree: 100%
 * [產品文件](https://experienceleague.adobe.com/zh-hant/docs)
 * [影片播放清單](https://experienceleague.adobe.com/zh-hant/playlists)
 * [活動](https://experienceleague.adobe.com/events/?lang=zh-Hant)
-* [社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=en)
+* [社群論壇](https://experienceleaguecommunities.adobe.com/?profile.language=zh-Hant)
 * [支援](https://experienceleague.adobe.com/zh-hant?support-tab=home#support)
 
 **留下意見反應：**&#x200B;尋找每篇文章或影片底部的「**_這些內容對您有幫助嗎？_**」快顯視窗。您的意見反應會經過整理後傳遞給內容作者。
