--- a/c-legacy-releases/2025/02122025.md
+++ b/c-legacy-releases/2025/02122025.md
@@ -75,7 +75,7 @@ ht-degree: 100%
 * 針對您的產品最新發佈的內容
 * 經過重新設計的全新改版介面
 
-[了解更多...](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-cloud/discover-smarter-faster-learning-with-experience-league-s-new/td-p/739750)
+[了解更多...](https://experienceleaguecommunities.adobe.com/t5/adobe-experience-cloud/discover-smarter-faster-learning-with-experience-league-s-new/td-p/739750?profile.language=zh-Hant)
 
 +++
 
