--- a/c-legacy-releases/2025/03122025.md
+++ b/c-legacy-releases/2025/03122025.md
@@ -25,7 +25,7 @@ ht-degree: 100%
 * [瀏覽與探索](https://experienceleague.adobe.com/zh-hant/browse)：尋找熱門內容、新的教學課程、文件、即將舉行的活動等！
 * [取得全新觀點](https://experienceleague.adobe.com/zh-hant/perspectives)：我們收集了各種真實使用案例和最佳實務，皆由您的同業及 Adobe 產品專家所撰寫。
 * [獲得認證](https://experienceleague.adobe.com/zh-hant/certification-home)：透過新的 Adobe 認證入口網站，輕鬆精進技能並獲得認證。
-* [與同業社群互動](https://experienceleaguecommunities.adobe.com/)：加入小組，認識我們的 Experience League 社群顧問，甚至也能學習如何成為顧問。
+* [與同業社群互動](https://experienceleaguecommunities.adobe.com/?profile.language=zh-Hant)：加入小組，認識我們的 Experience League 社群顧問，甚至也能學習如何成為顧問。
 
 ## 2025 年 3 月
 
